# sharebill-riir-again

./: Cargo.toml  test.json
assets/: all.css
migrations/2023-04-01-195810_create_tx/: up.sql
src/: lib.rs  models.rs  parse_arg.rs  rational.rs  schema.rs
templates/: overview.html  post.html
